# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: .coveragerc  .gitignore  README.md  arkkitehtuuri.md  changelog.md  kaytto-ohje.md  kayttoohje.md  pyproject.toml  tasks.py  testausdokumentti.md  tyoaikakirja.md  tyoaikakirja.txt  vaatimusmaarittely.md
dokumentaatio/dokumentit/: arkkitehtuuri.md  changelog.md  tyoaikakirja.md
dokumentaatio/src/: game.py  main.py  pyproject.toml
dokumentaatio/src/config/: dice.py  gui.py  player.py
dokumentaatio/src/config/visual/: draw_dice.py  draw_yatzy.py
dokumentaatio/src/repositories/: constants.py
dokumentaatio/src/tests/: game_test.py  gui_test.py
dokumentaatio/src/ui/: game.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: README.md  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: laajempisekvenssikaavio.md  laajennettu_monopoli.md  monopoli.md  sekvenssikaavio.md
src/: main.py
src/config/: dice.py  end_game.py  game_setup.py  gui.py  main_loop.py  player.py  pygame_initial.py
src/config/visual/: draw_dice.py  draw_end_game.py  draw_yatzy.py
src/repositories/: constants.py  delay_time.py
src/services/: build.py  connection.py  high_scores.db
src/tests/: end_game_test.py  game_setup_test.py  game_test.py  gui_test.py  main_loop_test.py
