[tool.poetry]
name = "dokumentaatio"
version = "0.1.0"
description = ""
authors = ["Antti_Lumppio <antti.lumppio@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
